--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-fastapi==0.95.1
-pydantic==1.10.2
+fastapi==0.115.12
+pydantic==2.11.5
 selenium==4.9.0
 webdriver-manager==3.8.5
-openai==0.27.2
-python-dotenv==1.0.0
+openai==1.82.1
+python-dotenv==1.1.0
 reportlab --prefer-binary
+uvicorn==0.34.2
